--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,23 @@
 .promo {
   width: 100%;
   height: 396px;
-  background-image: url('components/img/promo.jpg');
+  background-image: url('components/img/promo-mobile.jpg');
   background-position: center;
   -webkit-background-size: cover;
   background-size: cover;
 }
 
+.service {
+  width: 100%;
+  height: 407px;
+  background-image: url('components/img/watch-mobile.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-color: #ffffff;
+  border-top: 1px solid #CDCDCD;
+}
 .promo__container {
   width: 270px;
   margin: 0 auto;
@@ -15,9 +26,21 @@
   flex-direction: column;
 }
 
+.reason__container {
+  width: 270px;
+  margin: 0 auto;
+}
+
+.service__container {
+  width: 270px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
 .promo__title {
   width: 260px;
-  margin-top: 45px;
+  margin-top: 90px;
   margin-bottom: 15px;
   font-size: 14px;
   line-height: 16px;
@@ -45,12 +68,8 @@
 }
 
 .reason {
+  margin-bottom: 68px;
   background: #ffffff;
-}
-
-.reason__container {
-  width: 270px;
-  margin: 0 auto;
 }
 
 .reason__wrapper {
@@ -96,9 +115,43 @@
   line-height: 22px;
   color: rgba(0,0,0,0.60);
 }
+.condition {
+  margin-top: 44px;
+  text-align: center;
+}
+.btn-buy {
+  box-sizing: border-box;
+  margin-top: 25px;
+  width: 141px;
+  height: 42px;
+  background: #FFDD00;
+  box-shadow: 0 2px 0 0 #F59300;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #000000;
+  cursor: pointer;
+  outline: none;
+}
+.btn-buy:hover {
+  background: #ffd700;
+}
+
+.btn-buy:active {
+  box-shadow: none;
+}
 
 @media (min-width: 768px) {
+  .promo {
+    background-image: url('components/img/promo.jpg');
+  }
   .promo__container {
+    width: 560px;
+  }
+  .reason__container {
+    width: 560px;
+  }
+  .service__container {
     width: 560px;
   }
   .promo__title {
@@ -122,9 +175,6 @@
     text-align: left;
     font-size: 24px;
   }
-  .reason__container {
-    width: 560px;
-  }
   .reason-item {
     width: 180px;
     margin-bottom: 0;
@@ -145,10 +195,44 @@
   .reason-item__img {
     margin: 0;
   }
+  .service {
+    height: 350px;
+    background-image: url('components/img/watch.jpg');
+  }
+  .condition {
+    text-align: left;
+  }
+  .condition__title {
+    margin: 0;
+    margin-bottom: 24px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 28px;
+    color: #000000;
+  }
+  .condition__price {
+    margin: 0;
+    font-size: 16px;
+    line-height: 28px;
+    color: #000000;
+  }
+  .condition__text {
+    margin: 0;
+    font-size: 14px;
+    line-height: 32px;
+    color: rgba(0,0,0,0.60);
+  }
 }
+
 
 @media (min-width: 955px) {
   .promo__container {
+    width: 860px;
+  }
+  .reason__container {
+    width: 860px;
+  }
+  .service__container {
     width: 860px;
   }
   .promo__title {
@@ -157,17 +241,47 @@
     font-weight: bold;
     color: #ffffff;
   }
-
   .promo__text {
     font-size: 14px;
     line-height: 24px;
     font-weight: bold;
     color: #ffffff;
   }
-  .reason__container {
-    width: 860px;
-  }
   .reason-item {
     width: 248px;
+  }
+  .reason-item__title {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .reason-item__text {
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .condition {
+    float: left;
+    width: 385px;
+  }
+  .condition-item {
+    margin-bottom: 10px;
+  }
+  .condition__title {
+    margin: 0;
+    margin-bottom: 24px;
+    font-size: 24px;
+    line-height: 32px;
+    color: #000000;
+  }
+  .condition__price {
+    margin: 0;
+    font-size: 18px;
+    line-height: 32px;
+    color: #000000;
+  }
+  .condition__text {
+    margin: 0;
+    font-size: 14px;
+    line-height: 32px;
+    color: rgba(0,0,0,0.60);
   }
 }
